--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [[bin]]
 name = "rust_user_service"
-path = "rust/main.rs"
+path = "src/rust/main.rs"
 
 [dependencies]
 actix-web = "4"
