chore: Update database configuration and remove unused fields in user model

--- a/src/.env
+++ b/src/.env
@@ -2,8 +2,8 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_USER=root
-DATABASE_PASSWORD=password
-DATABASE_NAME=user_management
+DATABASE_PASSWORD=
+DATABASE_NAME=webapp_db
 
 # Server Configuration
 SERVER_HOST=127.0.0.1
