feat: implement dedicated MySQL user with minimal privileges and security tests

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Database Configuration
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
-DATABASE_USER=root
-DATABASE_PASSWORD=
+DATABASE_USER=webapp_user
+DATABASE_PASSWORD=webapp_dev_password
 DATABASE_NAME=webapp_db
 
 # Server Configuration
