--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,13 @@ actix-cors = "0.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "sqlite", "any", "chrono", "uuid"] }
 dotenv = "0.15"
 log = "0.4"
 env_logger = "0.11"
 thiserror = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
+
+[dev-dependencies]
+wiremock = "0.6"
